[package]
name = "vexnes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.16.0"
num-traits = { version = "0.2", default-features = false }
tetanes-core = { git = "https://github.com/doinkythederp/tetanes.git", version = "0.10.0", default-features = false, features = ["cycle-accurate"] }
vex-sdk = "0.14.0"
vexide = "0.2.1"
